--- a/Scoring device/Base.lproj/Main.storyboard
+++ b/Scoring device/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1217" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1217" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="sfA-sK-HWc">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -12,7 +12,7 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Scoring_device" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ViewController" id="BYZ-38-t0r" customClass="ViewController" customModule="Scoring_device" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -122,7 +122,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="返回"/>
                                 <connections>
-                                    <segue destination="sfA-sK-HWc" kind="show" id="Gbd-W5-sRT"/>
+                                    <segue destination="sfA-sK-HWc" kind="show" identifier="navTest" id="Gbd-W5-sRT"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RGx-fR-Qrs">
@@ -148,17 +148,17 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="916" y="-654"/>
+            <point key="canvasLocation" x="1372" y="-931"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="79o-W9-rhK">
             <objects>
-                <viewController id="sfA-sK-HWc" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ViewController2" id="sfA-sK-HWc" customClass="ViewController" customModule="Scoring_device" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="awk-mm-sDc"/>
                         <viewControllerLayoutGuide type="bottom" id="iUt-vs-HdF"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="1S5-Bp-NbV">
+                    <view key="view" contentMode="scaleToFill" restorationIdentifier="ViewController" id="1S5-Bp-NbV" customClass="UIButton">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -169,7 +169,7 @@
                                 <state key="normal" title="Next"/>
                                 <connections>
                                     <action selector="begangame:" destination="BYZ-38-t0r" eventType="touchUpInside" id="KWU-YO-eGc"/>
-                                    <segue destination="BYZ-38-t0r" kind="show" id="3EH-Uj-s9V"/>
+                                    <segue destination="BYZ-38-t0r" kind="show" identifier="NavTest2" id="Tw0-yC-kE1"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xvY-mR-L5l">
@@ -200,31 +200,41 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cee-MV-d1X">
+                                <rect key="frame" x="87" y="39" width="65" height="180"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fgn-WQ-F7B">
+                                <rect key="frame" x="232" y="45" width="98" height="169"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U1L-4m-g7x">
+                                <rect key="frame" x="94" y="240" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="UPloadA:" destination="sfA-sK-HWc" eventType="touchUpInside" id="P0T-kQ-czH"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sSu-eK-LZV">
+                                <rect key="frame" x="258" y="240" width="46" height="108"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="UploadB:" destination="sfA-sK-HWc" eventType="touchUpInside" id="ROs-9y-cww"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.80000000000000004" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
+                    <connections>
+                        <outlet property="phA" destination="cee-MV-d1X" id="mTt-52-gSI"/>
+                        <outlet property="phB" destination="fgn-WQ-F7B" id="G3A-H6-GVC"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mau-qM-b9g" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="916" y="-573"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="IuI-uR-zZh">
-            <objects>
-                <viewController id="IyW-GR-3mh" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="1s4-Zf-Llo"/>
-                        <viewControllerLayoutGuide type="bottom" id="zJy-Rj-rOY"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="sdB-Iw-blm">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="uvo-33-Ous" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="953" y="-588"/>
+            <point key="canvasLocation" x="1341.5999999999999" y="-823.53823088455783"/>
         </scene>
     </scenes>
     <resources>
